server/compilers/goLiteJS/src/test/ml1/valid/type5.go
// type declaration in switch block
package main

func main() {
    switch {
    default:
        type num int

        type (
            num int
            word string
        )
    }
}
