server/compilers/goLiteJS/src/test/ml1/invalid/struct6.go
// function defined in struct block
package main

type point struct {
    func f() {
        return
    }
}
